Fixes and additions based on the TODO list

--- a/src/app/claimForm.component.html
+++ b/src/app/claimForm.component.html
@@ -507,6 +507,7 @@
                   <mat-radio-button value="yes">yes</mat-radio-button>
                   <mat-radio-button value="no">no</mat-radio-button>
                 </mat-radio-group>
+                <mat-hint>optional</mat-hint>
               </div>
               <mat-icon aria-hidden="false" aria-label="Example info icon"
                         (click)="openHelpDialog('state_aid_notified')"
@@ -526,6 +527,7 @@
                   <mat-radio-button value="yes">yes</mat-radio-button>
                   <mat-radio-button value="no">no</mat-radio-button>
                 </mat-radio-group>
+                <mat-hint>optional</mat-hint>
               </div>
               <mat-icon aria-hidden="false" aria-label="Example info icon"
                         (click)="openHelpDialog('state_aid_de')"
