small fixes to grammar

--- a/src/app/components/member/member.component.html
+++ b/src/app/components/member/member.component.html
@@ -4,7 +4,7 @@
       User Dashboard
     </h2>
 
-    <p><br>Add an addition claim</p>
+    <p><br>Add an additional claim</p>
     <button mat-stroked-button (click)="newClaim()" style="margin-top: 10px;
       margin-bottom: 20px" *ngIf="!loadingPayment">
       New claim
