--- a/src/app/tltv1.component.html
+++ b/src/app/tltv1.component.html
@@ -7,7 +7,7 @@
          the perfect claim for you.
        </h5>
        <p>
-         None of your information will be stored at this point, and you are welcome to leave the test at any time
+         None of your information will be stored at this point, and you are welcome to leave the test at any time.
        </p>
        <form  [formGroup]='trafficLightForm' (ngSubmit)="onSubmit()">
          <div class="form-group; question_border" style="margin-top: 20px">
