--- a/src/app/welcome.component.html
+++ b/src/app/welcome.component.html
@@ -6,7 +6,7 @@
       </a>
     </div>
     <h2>
-      Welcome to MaximumR&D.
+      Welcome to MaximumR&D
     </h2>
     <p>
       If you believe your company has been carrying on Research and Development, you may be entitled
@@ -19,7 +19,7 @@
       tax relief from HMRC.
     </p>
     <button mat-stroked-button [routerLink]="['/tltv1']">
-      Take our test here.
+      Take our test here
     </button>
   </div>
 </div>
